k8s/namespaces/development/harbor/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-https
  namespace: development
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`harbor.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: harbor
          port: 80
          passHostHeader: true
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-http
  namespace: development
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`harbor.oglesby.io`)
      kind: Rule
      services:
        - name: harbor
          port: 80
          passHostHeader: true
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
