k8s/namespaces/development/harbor/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-harbor-https
  namespace: development
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`harbor.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
      services:
        - name: harbor
          port: 80
          passHostHeader: true
  tls: 
    secretName: oglesby-io-tls
